src/objects/Attendee__c.object
<CustomObject>
    <description>People attending the music festival.</description>
    <fields>
        <fullName>Email__c</fullName>
        <description>Attendee email address.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <description>The festival that the attendee is going to.</description>
        <label>Festival</label>
        <referenceTo>Festival__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Phone number of attendee.</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>Date of ticket purchase.</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Source__c</fullName>
        <label>Purchase Source</label>
        <picklist>
            <picklistValues>
                <fullName>Box Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Official Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Ticket Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <description>The type of ticket purchased.</description>
        <label>Ticket Type</label>
        <picklist>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Admission</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tickets_Purchased__c</fullName>
        <description>Number of tickets purchased.</description>
        <label>Tickets Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spent__c</fullName>
        <formula>IF (ISPICKVAL (Ticket_Type__c , &quot;VIP&quot;), 100 *  Tickets_Purchased__c , 50 * Tickets_Purchased__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ticket_Purchase_Limit</fullName>
        <active>true</active>
        <description>Make sure person has bought more than zero but not greater than 8.</description>
        <errorConditionFormula>Tickets_Purchased__c  &gt; 8  ||  Tickets_Purchased__c  &lt; 1</errorConditionFormula>
        <errorMessage>You must purchase between 1 and 8 tickets.</errorMessage>
    </validationRules>
</CustomObject>